environments/test/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openedx
  namespace: gca-test
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
  - hosts:
    - "test.global-communications-academy.com"
    - "*.test.global-communications-academy.com"
    secretName: wild-openedx-test-tls
  rules:
  - host: test.global-communications-academy.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lms
            port:
              number: 8000
  - host: studio.test.global-communications-academy.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cms
            port:
              number: 8000
  - host: discovery.test.global-communications-academy.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: discovery
              port:
                number: 8000
